# gorgon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cog.toml
.github/: codeowners
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: event_pr.yaml  event_release.yaml  sub-ci.yml
src/: geoip.rs  lib.rs  tests.rs  time.rs
src/batcher/: aws.rs  mod.rs  parquet.rs  tests.rs
src/collectors/: batch.rs  traits.rs
src/exporters/: aws.rs
