[package]
name = "gorgon"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "sync", "time", "macros"] }

serde = { version = "1", features = ["derive", "rc"] }

tracing = "0.1"

# Misc
thiserror = "1.0"
anyhow = "1"

chrono = { version = "0.4", features = ["serde"] }
aws-sdk-s3 = "0.24.0"
maxminddb = "0.23"
bytes = "1.2"
parquet = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "431abf5", default-features = false, features = ["flate2"]  }
parquet_derive = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "431abf5" }
