[package]
name = "gorgon"
version = "0.1.3"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1"

# Misc
thiserror = "1.0"
anyhow = "1"

chrono = { version = "0.4" }
aws-sdk-s3 = "0.24"
maxminddb = "0.23"
bytes = "1.2"
parquet = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "4577a11", default-features = false, features = ["flate2"]  }
parquet_derive = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "4577a11" }
